update page org, cv page -> research

--- a/research.html
+++ b/research.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Qihong Lu | Research</title>
+    <title>Qihong Lu | CV</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
     <meta name="viewport" content="width=device-width">
@@ -19,8 +19,9 @@
       ga('send', 'pageview');
     </script>
 
-  </head>
-  <body>
+    </head>
+
+<body>
     <div class="wrapper">
       <header>
         <h1>Qihong Lu</h1>
@@ -28,9 +29,9 @@
 
         <br>
         <p class="view"> <a href="index.html">Home</a></p>
-        <p class="view">Research</p>
+<!--         <p class="view"><a href="research.html">Research</a></p> -->
         <!-- <p class="view"> <a href="teaching.html">Teaching</a></p> -->
-        <p class="view"> <a href="cv.html">CV</a></p>
+        <p class="view">Research</p>
         <p class="view"> <a href="resources.html">Resources</a></p>
         <p class="view"> <a href="contact.html">Contact</a></p>
         <br>
@@ -47,128 +48,141 @@
 
       </header>
       <section>
-        <h3>
 
-FYI: This page is quite outdated...
+<h3>
 
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true">
+    <span aria-hidden="true" class="octicon octicon-link"></span>
+</a>
 
-<!-- <h3 id="top"><strong>4. Shared representational geometry across neural networks</strong></h3>
-- [
-<a href = "docs/cogsci2018_poster.pdf"> CogSci 2018 Poster</a>
-] -->
+</h3>
 
+<!-- <h3><p> <strong>Education</strong></p> </h3>
 
-<br><br><br>
-
-<h3 id="top"><strong>3. A recurrent neural network for human object recognition</strong></h3>
-<center>
-<p style="width: 500px;">
-<img src="/imgs/research/pdp_cat_demo.png"></p></center>
-<p> Ultra-rapid categorization (<a href = "http://www.mitpressjournals.org/doi/abs/10.1162/jocn_a_00701#.V6ENc5MrJgo">Wu, et al., 2015</a>) has been considered as primarily feed-forward (<a href = "http://www.pnas.org/content/104/15/6424.full">Serre, Oliva & Poggio, 2007</a>). However, we show that the behavior of a recurrent neural network is still compatible with the empirical findings. These results provide evidence that object recognition is supported by interactive processes in the brain.
+Ph.D. in Psychology, Princeton University
+<div style="float: right;">2017 ~ </div><br/>
 <br>
-- [
-<a href = "docs/cogsci2016_poster.pdf"> CogSci 2016 Poster</a>,
-<a href = "https://mindmodeling.org/cogsci2016/papers/0508/index.html"> CogSci 2016 Abstract</a>,
-<a href = "https://github.com/QihongL/categorization_PDP"> Code</a>
-]
+
+B.S. in Mathematics and Psychology, UW-Madison
+<div style="float: right;">2013 ~ May 2017 </div><br/>
+<br> -->
+
+<!-- 
+<br>
+<h3><p> <strong>Labs</strong>
 </p>
+</h3>
+
+<a href ="http://compmem.princeton.edu/">Princeton Computational Memory Lab</a>
+<div style="float: right;">2017~</div><br/>
+PI: Ken Norman, Princeton University
+<br><br>
+
+<a href ="https://www.hassonlab.com/">Hasson Lab</a>
+<div style="float: right;">2017~</div><br/>
+PI: Uri Hasson, Princeton University
+<br><br> -->
 
 
-<p style="margin-left:.5in;text-indent:-.5in">
-<b>Lu, Q.</b>, Cox, C., Rogers, T. T., Lambon Ralph, M.A., Takahashi R. (manuscript in preparation). An interactive account for human vision: a recurrent neural network explains neural and behavioral temporal dynamics of object recognition process.
-</p>
-
-<p style="margin-left:.5in;text-indent:-.5in">
-<b>Lu, Q.</b>, & Rogers, T. T. (2016). An interactive model accounts for both ultra-rapid superordinate classification and basic-level advantage in object recognition.
-<i>
-Poster presented at the 38th Annual Meeting of the Cognitive Science Society, Philadelphia, PA.
-</i>
-</p>
-
-<br><br><br>
-
-
-<h3><strong>2. A reinforcement learning network for "counting"</strong></h3>
-
-<center>
-<p style="width: 450px;">
-<img src="/imgs/research/countModel_envir.png"></p></center>
+<!-- <br> -->
+<h3><p> <strong>Conference presentations</strong></p></h3>
+<!-- <div style="padding-left: 4em; text-indent: -4em;"> -->
 
 <p>
-Counting skill is a foundation for more sophisticated math concepts, and it takes children several years to learn to do it well. To understand this learning process, we explored how social feedback helps a DQN-like (<a href = "http://www.nature.com/nature/journal/v518/n7540/full/nature14236.html">Mnih, et al., 2015</a>) agent to learn a counting-related task.
-
+Lu, Q., Hasson, U., & Norman, K. A. (2018).
+<b>Modeling hippocampal-cortical dynamics during event processing.</b>
+The Conference on Cognitive Computational Neuroscience, Philadelphia, PA. 
 <br>
-- [
-<a href = "docs/ncpw16_poster.pdf">NCPW 2016 Poster</a>,
-<a href = "docs/Lu_McClelland_Teaching_ANN_to_count.pdf">NCPW 2016 Abstract</a>,
-<a href = "https://github.com/QihongL/mathCognition_PDP_RL"> Code </a>
-]
+<a href="https://ccneuro.org/Papers/ViewPapers.asp?PaperNum=1048">paper</a>, 
+<a href="https://qihongl.github.io/docs/CCN18_poster_HCModel.pdf">poster</a>
 </p>
-
-<p style="margin-left:.5in;text-indent:-.5in">
-<b>Lu, Q.</b>, & McClelland, J.L. (2016). Teaching a neural network to count: reinforcement learning with “social scaffolding”.
-<i>
-Poster presented at the 15th Neural Computation and Psychology Workshop, Philadelphia, PA.
-</i>
-</p>
-
-
-<br><br><br>
-
-
-
-
-<h3><strong>1. Discover distributed representation with sparse MVPA methods</strong></h3>
-</i>
-</p>
-
-<center>
-<p style="width: 450px;">
-<img src="/imgs/research/ilassoResults.png"></p></center>
 
 <p>
-We developed a sparse multivoxel pattern analysis (MVPA) method that identifies task-relevant signal directly from whole-brain fMRI data. For the neural representations of faces, places, and objects, besides some classic ROIs (e.g. <a href = "http://www.jneurosci.org/content/17/11/4302.full">Kanwisher, McDermott, and Chun, 1997</a>), we also found many additional brain regions that are spatially distributed and idiosyncratic across subjects.
+Chen, C., Lu, Q., Beukers, A., Baldassano, C., & Norman, K. A. (2018).
+<b>Generalized schema learning by neural networks.</b>
+The Conference on Cognitive Computational Neuroscience, Philadelphia, PA. 
+<br>
+<a href="https://ccneuro.org/Papers/ViewPapers.asp?PaperNum=1036">paper</a>
+</p>
+
+<p>
+Yu, J., Lu, Q., Hasson, U., Norman, K. A., & Pillow, J. W. (2018).
+<b>Performance optimization is insufficient for building accurate models for neural representation.</b>
+The Conference on Cognitive Computational Neuroscience, Philadelphia, PA. 
+<br>
+<a href="https://ccneuro.org/Papers/ViewPapers.asp?PaperNum=1148">paper</a>
+</p>
+
+<p>
+Lu, Q., Ramadge, P., Norman, K. A., & Hasson, U. (2018).
+<b>Measuring representational similarity across neural networks.</b>
+Poster presented at the 40th Annual Meeting of the Cognitive Science Society, Madison, WI. 
+<br>
+<a href="https://qihongl.github.io/docs/cogsci2018_poster.pdf">poster</a>
+</p> 
+
+<p>
+Lu, Q., & Rogers, T. T. (2016).
+<b>An interactive model accounts for both ultra-rapid superordinate classification and basic-level advantage in object recognition.</b>
+Poster presented at the 38th Annual Meeting of the Cognitive Science Society, Philadelphia, PA. 
+<br>
+<a href="https://qihongl.github.io/docs/cogsci2016_poster.pdf">poster</a>, 
+<a href = "https://github.com/QihongL/categorization_PDP">code</a>
+</p>
+
+<p>
+Lu, Q., & McClelland, J. L. (2016).
+<b>Teaching a neural network to count: reinforcement learning with "social scaffolding".</b>
+Poster presented at the 15th Neural Computation and Psychology Workshop, Philadelphia, PA. 
+<br>
+<a href="https://qihongl.github.io/docs/ncpw16_poster.pdf">poster</a>, 
+<a href = "https://github.com/QihongL/mathCognition_PDP_RL">code</a>
+</p>
+
+<p>
+Cox, C. R., Lu, Q., & Rogers, T. T. (2015).
+<b>Iterative Lasso: An even-handed approach to whole brain multivariate pattern analysis.</b>
+Poster presented at the 22nd Cognitive Neuroscience Society annual conference, San Francisco, CA, and the Neuroimaging, Computational Neuroscience and Neuroengineering Workshop, Madison, WI. 
+<br>
+<a href="https://qihongl.github.io/docs/cox_lu_rogers_CNS2015.pdf">poster</a>, 
+<a href="https://github.com/crcox/WISC_MVPA">code</a>
+</p>
+
+<!-- </div> -->
+
 
 <br>
-- [
-<a href = "docs/cox_lu_rogers_CNS2015.pdf">CNS 2015 Poster </a>
-,
-<a href = "https://github.com/crcox/iterativelasso"> Code</a>
-]
-</p>
+<h3><p> <strong>Manuscripts</strong></p></h3>
+<!-- <div style="padding-left: 4em; text-indent: -4em;"> -->
 
-<p style="margin-left:.5in;text-indent:-.5in">
-Cox, C. R., <b>Lu, Q.</b>, & Rogers, T. T. (2015). Iterative Lasso: An even-handed approach to whole brain multivariate pattern analysis.
-<i>
-Poster presented at the 22nd Cognitive Neuroscience Society Annual Conference, San Francisco, CA.
-</i>
+
+<p>
+McClelland, J. L., Mickey, K., Hansen, S., Yuan, X., & Lu, Q. (2016). 
+<b>A Parallel-Distributed Processing Approach to Mathematical Cognition.</b>
 <br>
+<a href ="http://stanford.edu/~jlmcc/papers/McCEtAl16MsPDPApproachToMathematicalCognition.pdf">manuscript</a>
 </p>
 
-<p style="margin-left:.5in;text-indent:-.5in">
-Cox, C. R.,  <b>Lu, Q.</b>, & Rogers, T. T. (2015). Iterative Lasso: An even-handed approach to whole brain multivariate pattern analysis.
-<i>
-Poster presented at the Neuroimaging, Computational Neuroscience and Neuroengineering Workshop, Madison, WI.
-</i>
+<p>
+Wang, T., Lu, Q., & Seidenberg, M.S. (submitted). 
+<b>The role of transitional probability in reading Chinese.</b>
 </p>
 
+<!-- </div> -->
 
 
 
-<br><br><br>
+</section>
 
-<center><a href="#top">Go to top</a></center>
+<footer>
+    <p><small>Hosted on GitHub Pages<br>
+    Theme by <a href="https://github.com/orderedlist">orderedlist</a>
+    </small></p>
+</footer>
 
+</div>
 
+<script src="javascripts/scale.fix.js"></script>
 
-      </section>
-      <footer>
-        <p><small>Hosted on GitHub Pages<br>
-        Theme by <a href="https://github.com/orderedlist">orderedlist</a>
-        </small></p>
-      </footer>
-    </div>
-    <script src="javascripts/scale.fix.js"></script>
-
-  </body>
+</body>
 </html>
