--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         <br>
 
         <p class="view"> Home </p>
-<!--         <p class="view"> <a href="research.html">Research</a></p> -->
+        <p class="view"> <a href="research.html">Research</a></p>
         <!-- <p class="view"> <a href="teaching.html">Teaching</a></p> -->
-        <p class="view"> <a href="cv.html">CV</a></p>
+<!--         <p class="view"> <a href="cv.html">CV</a></p> -->
         <p class="view"> <a href="resources.html">Resources</a></p>
         <p class="view"> <a href="contact.html">Contact</a></p>
         <br>
@@ -66,6 +66,7 @@ Hi, my name is Qihong Lu (吕其鸿). I'm a 1st year PhD student with
 <a href="http://psychology.princeton.edu/person/kenneth-norman">Ken Norman</a> and
 <a href="https://psych.princeton.edu/person/uri-hasson-0">Uri Hasson</a>
 at Princeton.
+Here's my <a href="docs/CV_QL.pdf">CV</a>.
 </h4>
 </p>
 
@@ -76,7 +77,8 @@ at Princeton.
   this fall. Here's the 
   <a href="https://github.com/NEU480/organization">class repo</a>. 
   </li>
-  <li>
+  
+<li>
   I'm organizing the weekly PDP meeting. Here's the schedule.
   </li>
 </ul> -->
