--- a/resources.html
+++ b/resources.html
@@ -28,9 +28,9 @@
 
         <br>
         <p class="view"> <a href="index.html">Home</a></p>
-<!--         <p class="view"> <a href="research.html">Research</a></p> -->
+        <p class="view"> <a href="research.html">Research</a></p>
         <!-- <p class="view"> <a href="teaching.html">Teaching</a></p> -->
-        <p class="view"> <a href="cv.html">CV</a></p>
+<!--         <p class="view"> <a href="cv.html">CV</a></p> -->
         <p class="view">Resources</p>
         <p class="view"> <a href="contact.html">Contact</a></p>
         <br>
