--- a/research.html
+++ b/research.html
@@ -90,32 +90,42 @@ PI: Uri Hasson, Princeton University
 
 <p>
 Lu, Q., Hasson, U., & Norman, K. A. (2018).
+<br>
 <b>Modeling hippocampal-cortical dynamics during event processing.</b>
+<br>
 The Conference on Cognitive Computational Neuroscience, Philadelphia, PA. 
 <br>
-<a href="https://ccneuro.org/Papers/ViewPapers.asp?PaperNum=1048">paper</a>, 
+<a href="https://ccneuro.org/Papers/ViewPapers.asp?PaperNum=1048">manuscript</a>, 
 <a href="https://qihongl.github.io/docs/CCN18_poster_HCModel.pdf">poster</a>
 </p>
 
 <p>
 Chen, C., Lu, Q., Beukers, A., Baldassano, C., & Norman, K. A. (2018).
+<br>
 <b>Generalized schema learning by neural networks.</b>
+<br>
 The Conference on Cognitive Computational Neuroscience, Philadelphia, PA. 
 <br>
-<a href="https://ccneuro.org/Papers/ViewPapers.asp?PaperNum=1036">paper</a>
+<a href="https://ccneuro.org/Papers/ViewPapers.asp?PaperNum=1036">manuscript</a>, 
+<a href="https://qihongl.github.io/docs/CCN18_poster_binding.pdf">poster</a>
 </p>
 
 <p>
 Yu, J., Lu, Q., Hasson, U., Norman, K. A., & Pillow, J. W. (2018).
+<br>
 <b>Performance optimization is insufficient for building accurate models for neural representation.</b>
+<br>
 The Conference on Cognitive Computational Neuroscience, Philadelphia, PA. 
 <br>
-<a href="https://ccneuro.org/Papers/ViewPapers.asp?PaperNum=1148">paper</a>
+<a href="https://ccneuro.org/Papers/ViewPapers.asp?PaperNum=1148">manuscript</a>, 
+<a href="https://qihongl.github.io/docs/CNN18_poster_perfopt.pdf">poster</a>
 </p>
 
 <p>
 Lu, Q., Ramadge, P., Norman, K. A., & Hasson, U. (2018).
+<br>
 <b>Measuring representational similarity across neural networks.</b>
+<br>
 Poster presented at the 40th Annual Meeting of the Cognitive Science Society, Madison, WI. 
 <br>
 <a href="https://qihongl.github.io/docs/cogsci2018_poster.pdf">poster</a>
@@ -123,7 +133,9 @@ Poster presented at the 40th Annual Meeting of the Cognitive Science Society, Ma
 
 <p>
 Lu, Q., & Rogers, T. T. (2016).
+<br>
 <b>An interactive model accounts for both ultra-rapid superordinate classification and basic-level advantage in object recognition.</b>
+<br>
 Poster presented at the 38th Annual Meeting of the Cognitive Science Society, Philadelphia, PA. 
 <br>
 <a href="https://qihongl.github.io/docs/cogsci2016_poster.pdf">poster</a>, 
@@ -132,7 +144,9 @@ Poster presented at the 38th Annual Meeting of the Cognitive Science Society, Ph
 
 <p>
 Lu, Q., & McClelland, J. L. (2016).
+<br>
 <b>Teaching a neural network to count: reinforcement learning with "social scaffolding".</b>
+<br>
 Poster presented at the 15th Neural Computation and Psychology Workshop, Philadelphia, PA. 
 <br>
 <a href="https://qihongl.github.io/docs/ncpw16_poster.pdf">poster</a>, 
@@ -141,7 +155,9 @@ Poster presented at the 15th Neural Computation and Psychology Workshop, Philade
 
 <p>
 Cox, C. R., Lu, Q., & Rogers, T. T. (2015).
+<br>
 <b>Iterative Lasso: An even-handed approach to whole brain multivariate pattern analysis.</b>
+<br>
 Poster presented at the 22nd Cognitive Neuroscience Society annual conference, San Francisco, CA, and the Neuroimaging, Computational Neuroscience and Neuroengineering Workshop, Madison, WI. 
 <br>
 <a href="https://qihongl.github.io/docs/cox_lu_rogers_CNS2015.pdf">poster</a>, 
@@ -158,6 +174,7 @@ Poster presented at the 22nd Cognitive Neuroscience Society annual conference, S
 
 <p>
 McClelland, J. L., Mickey, K., Hansen, S., Yuan, X., & Lu, Q. (2016). 
+<br>
 <b>A Parallel-Distributed Processing Approach to Mathematical Cognition.</b>
 <br>
 <a href ="http://stanford.edu/~jlmcc/papers/McCEtAl16MsPDPApproachToMathematicalCognition.pdf">manuscript</a>
@@ -165,6 +182,7 @@ McClelland, J. L., Mickey, K., Hansen, S., Yuan, X., & Lu, Q. (2016).
 
 <p>
 Wang, T., Lu, Q., & Seidenberg, M.S. (submitted). 
+<br>
 <b>The role of transitional probability in reading Chinese.</b>
 </p>
 
