--- a/research.html
+++ b/research.html
@@ -95,8 +95,8 @@ Lu, Q., Hasson, U., & Norman, K. A. (2018).
 <br>
 The Conference on Cognitive Computational Neuroscience, Philadelphia, PA. 
 <br>
-<a href="https://ccneuro.org/Papers/ViewPapers.asp?PaperNum=1048">manuscript</a>, 
-<a href="https://qihongl.github.io/docs/CCN18_poster_HCModel.pdf">poster</a>
+<a href="https://qihongl.github.io/docs/CCN18_poster_HCModel.pdf">poster</a>, 
+<a href="https://ccneuro.org/Papers/ViewPapers.asp?PaperNum=1048">manuscript</a>
 </p>
 
 <p>
@@ -106,8 +106,8 @@ Chen, C., Lu, Q., Beukers, A., Baldassano, C., & Norman, K. A. (2018).
 <br>
 The Conference on Cognitive Computational Neuroscience, Philadelphia, PA. 
 <br>
-<a href="https://ccneuro.org/Papers/ViewPapers.asp?PaperNum=1036">manuscript</a>, 
-<a href="https://qihongl.github.io/docs/CCN18_poster_binding.pdf">poster</a>
+<a href="https://qihongl.github.io/docs/CCN18_poster_binding.pdf">poster</a>, 
+<a href="https://ccneuro.org/Papers/ViewPapers.asp?PaperNum=1036">manuscript</a>
 </p>
 
 <p>
@@ -117,8 +117,8 @@ Yu, J., Lu, Q., Hasson, U., Norman, K. A., & Pillow, J. W. (2018).
 <br>
 The Conference on Cognitive Computational Neuroscience, Philadelphia, PA. 
 <br>
-<a href="https://ccneuro.org/Papers/ViewPapers.asp?PaperNum=1148">manuscript</a>, 
-<a href="https://qihongl.github.io/docs/CNN18_poster_perfopt.pdf">poster</a>
+<a href="https://qihongl.github.io/docs/CNN18_poster_perfopt.pdf">poster</a>, 
+<a href="https://ccneuro.org/Papers/ViewPapers.asp?PaperNum=1148">manuscript</a>
 </p>
 
 <p>
