update class webpage

--- a/research.html
+++ b/research.html
@@ -158,7 +158,9 @@ Cox, C. R., Lu, Q., & Rogers, T. T. (2015).
 <br>
 <b>Iterative Lasso: An even-handed approach to whole brain multivariate pattern analysis.</b>
 <br>
-Poster presented at the 22nd Cognitive Neuroscience Society annual conference, San Francisco, CA, and the Neuroimaging, Computational Neuroscience and Neuroengineering Workshop, Madison, WI. 
+Poster presented at the 22nd Cognitive Neuroscience Society annual conference, San Francisco, CA.  
+<br>
+Poster presented at the Neuroimaging, Computational Neuroscience and Neuroengineering Workshop, Madison, WI. 
 <br>
 <a href="https://qihongl.github.io/docs/cox_lu_rogers_CNS2015.pdf">poster</a>, 
 <a href="https://github.com/crcox/WISC_MVPA">code</a>
