--- a/index.html
+++ b/index.html
@@ -70,18 +70,11 @@ Here's my <a href="docs/CV_QL.pdf">CV</a>.
 </h4>
 </p>
 
-<!-- Ongoing stuff: 
+Ongoing stuff: 
 <ul>
-  <li>I'm TAing the brain decoding course, 
-  <a href="https://registrar.princeton.edu/course-offerings/course_details.xml?courseid=011565&term=1192">ELE/NEU/PSY480</a>, 
-  this fall. Here's the 
-  <a href="https://github.com/NEU480/organization">class repo</a>. 
-  </li>
-  
-<li>
-  I'm organizing the weekly PDP meeting. Here's the schedule.
-  </li>
-</ul> -->
+<li><a href="https://github.com/NEU480/organization/wiki">NEU480 class webpage</a>
+</li>
+</ul>
 
 
 <!-- <br>
