--- a/index.html
+++ b/index.html
@@ -61,13 +61,13 @@
 </center>
 
 <p>
-<h4>
-Hi, my name is Qihong Lu (吕其鸿). I'm a 1st year PhD student with
+<!-- <h4> -->
+Hi, my name is Qihong Lu (吕其鸿). I'm a 2nd year PhD student with
 <a href="http://psychology.princeton.edu/person/kenneth-norman">Ken Norman</a> and
 <a href="https://psych.princeton.edu/person/uri-hasson-0">Uri Hasson</a>
 at Princeton.
 Here's my <a href="docs/CV_QL.pdf">CV</a>.
-</h4>
+
 </p>
 
 Ongoing stuff: 
@@ -76,12 +76,7 @@ Ongoing stuff:
 </li>
 </ul>
 
-
-<!-- <br>
-<a class="twitter-timeline" data-height="500" data-theme="light" href="https://twitter.com/Qihong_Lu?ref_src=twsrc%5Etfw">
-    Tweets by Qihong_Lu
-</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> -->
-
+<!-- </h4> -->
       </section>
       <footer>
         <p><small>Hosted on GitHub Pages<br>
