update some info

--- a/contact.html
+++ b/contact.html
@@ -86,7 +86,7 @@ Contact info
     </style>
     </head>
     <body>
-    <h4>Princeton Neuroscience Institute</h4>
+    <h4>Peretsman Scully Hall / Princeton Neuroscience Institute</h4>
     <div id="map"></div>
     <script>
         function initMap() {
@@ -109,9 +109,6 @@ Contact info
 
 
 <!-- <div class="mapouter"><div class="gmap_canvas"><iframe width="500" height="400" id="gmap_canvas" src="https://maps.google.com/maps?q=princeton%20neuroscience%20ins&t=&z=17&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.embedgooglemap.net">embedgooglemap.net</a></div><style>.mapouter{text-align:right;height:400px;width:500px;}.gmap_canvas {overflow:hidden;background:none!important;height:400px;width:500px;}</style></div> -->
-
-
-
 
 
 
