--- a/index.html
+++ b/index.html
@@ -52,18 +52,18 @@
 
 
 
-<h2>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to my personal webpage!
-</h2>
-
+<!-- <h3> -->
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
+Welcome to my personal webpage!
+<!-- </h3> -->
 <center>
     <p style="width: 500px;"><img src="/imgs/myPics/me_slc.png"></p>
 </center>
-
 <p>
-<!-- <h4> -->
+
 Hi, my name is Qihong Lu (吕其鸿). I'm a 2nd year PhD student with
-<a href="http://psychology.princeton.edu/person/kenneth-norman">Ken Norman</a> and
+<a href="http://psychology.princeton.edu/person/kenneth-norman">Ken Norman</a> 
+and
 <a href="https://psych.princeton.edu/person/uri-hasson-0">Uri Hasson</a>
 at Princeton.
 Here's my <a href="docs/CV_QL.pdf">CV</a>.
@@ -72,11 +72,17 @@ Here's my <a href="docs/CV_QL.pdf">CV</a>.
 
 Ongoing stuff: 
 <ul>
-<li><a href="https://github.com/NEU480/organization/wiki">NEU480 class webpage</a>
-</li>
+    <li>
+    I'm teaching NEU 480, here's the 
+    <a href="https://github.com/NEU480/organization/wiki">class webpage</a>
+    </li>
+    <li>
+    I'm organizing the PDP meeting. Please send me an email if you would like to join the mailing list. 
+    </li>
 </ul>
 
-<!-- </h4> -->
+
+
       </section>
       <footer>
         <p><small>Hosted on GitHub Pages<br>
