--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@ Here's my <a href="docs/CV_QL.pdf">CV</a>.
 Ongoing stuff: 
 <ul>
     <li>
-    I'm teaching NEU 480, here's the 
-    <a href="https://github.com/NEU480/organization/wiki">class webpage</a>
+    I'm TAing NEU 480. Here's the 
+    <a href="https://github.com/NEU480/organization/wiki">class webpage</a>.
     </li>
     <li>
     I'm organizing the PDP meeting. Please send me an email if you would like to join the mailing list. 
