--- a/index.html
+++ b/index.html
@@ -1,96 +1,106 @@
 <!doctype html>
 <html>
-  <head>
+
+<!-- browser tab head  -->
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Qihong Lu | Princeton University</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
     <meta name="viewport" content="width=device-width">
-
     <link rel="shortcut icon" href="https://psych.princeton.edu/sites/psychology/themes/psychology/favicon.ico" type="image/vnd.microsoft.icon" />
 
     <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-83024954-2', 'auto');
-      ga('send', 'pageview');
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+        ga('create', 'UA-83024954-2', 'auto');
+        ga('send', 'pageview');
     </script>
+</head>
 
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1>Qihong Lu</h1>
-        <p></p>
+<!-- the main body  -->
 
-        <br>
+<body>
+<div class="wrapper">
 
-        <p class="view"> Home </p>
-        <p class="view"> <a href="research.html">Research</a></p>
-        <!-- <p class="view"> <a href="teaching.html">Teaching</a></p> -->
-<!--         <p class="view"> <a href="cv.html">CV</a></p> -->
-        <p class="view"> <a href="resources.html">Resources</a></p>
-        <p class="view"> <a href="contact.html">Contact</a></p>
-        <br>
+<!-- the left column  -->
 
-        <p class="view">
-        <a href="https://github.com/QihongL"> <img src="imgs/logo/github.png" alt="myGithub" style="width:40px;height:40px;"></a>
-        <a href="mailto:qlu@princeton.edu" target="_top"><img src="imgs/logo/email.png" alt="myEmail" style="width:40px;height:40px;"></a>
-        </p>
+<header>
+    <h1>Qihong Lu</h1>
+    <br>
 
-        <p class="view">
-        <a href="https://www.facebook.com/qihong.lu.9"> <img src="imgs/logo/facebook.png" alt="myFacebook" style="width:40px;height:40px;"></a>
-        <a href="https://twitter.com/Qihong_Lu"> <img src="imgs/logo/twitter_flat.png" alt="myTwitter" style="width:41px;height:41px;"></a>
-        </p>
+    <p class="view">Home</p>
+    <p class="view"><a href="research.html">Research</a></p>
+    <p class="view"><a href="resources.html">Resources</a></p>
+    <p class="view"><a href="contact.html">Contact</a></p>
+    <br>
 
+    <p class="view">
+    <a href="https://github.com/QihongL"> <img src="imgs/logo/github.png" alt="myGithub" style="width:40px;height:40px;"></a>
+    <a href="mailto:qlu@princeton.edu" target="_top"><img src="imgs/logo/email.png" alt="myEmail" style="width:40px;height:40px;"></a>
+    </p>
 
-      </header>
-      <section>
+    <p class="view">
+    <a href="https://www.facebook.com/qihong.lu.9"> <img src="imgs/logo/facebook.png" alt="myFacebook" style="width:40px;height:40px;"></a>
+    <a href="https://twitter.com/Qihong_Lu"> <img src="imgs/logo/twitter_flat.png" alt="myTwitter" style="width:41px;height:41px;"></a>
+    </p>
+</header>
 
+<!-- the END of left column  -->
 
+<!-- the right column  -->
 
-<!-- <h3> -->
+<section>
+
+<h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
-Welcome to my personal webpage!
-<!-- </h3> -->
+<strong>Welcome to my personal webpage!</strong>
+</h3>
+
+<br>
 <center>
     <p style="width: 500px;"><img src="/imgs/myPics/me_slc.png"></p>
 </center>
-<p>
 
-Hi, my name is Qihong Lu (吕其鸿). I'm a 2nd year PhD student with
-<a href="http://psychology.princeton.edu/person/kenneth-norman">Ken Norman</a> 
+<p>
+Hi, my name is Qihong Lu (吕其鸿).
+I'm a 2nd year PhD student with
+<a href="http://psychology.princeton.edu/person/kenneth-norman">Ken Norman</a>
 and
 <a href="https://psych.princeton.edu/person/uri-hasson-0">Uri Hasson</a>
 at Princeton.
 Here's my <a href="docs/CV_QL.pdf">CV</a>.
-
 </p>
 
-Ongoing stuff: 
+Ongoing stuff:
 <ul>
     <li>
-    I'm TAing NEU 480. Here's the 
+    I'm TAing NEU 480. Here's the
     <a href="https://github.com/NEU480/organization/wiki">class webpage</a>.
     </li>
     <li>
-    I'm organizing the PDP meeting. Please send me an email if you would like to join the mailing list. 
+    I'm organizing the weekly PDP meeting.
+    Please send me an email if you would like to 
+    join the mailing list / present your work / etc.
     </li>
 </ul>
 
+</section>
 
+<!-- the END of right column  -->
 
-      </section>
-      <footer>
-        <p><small>Hosted on GitHub Pages<br>
-        Theme by <a href="https://github.com/orderedlist">orderedlist</a>
-        </small></p>
-      </footer>
-    </div>
-    <script src="javascripts/scale.fix.js"></script>
+<footer>
+    <p><small>Hosted on GitHub Pages<br>
+    Theme by <a href="https://github.com/orderedlist">orderedlist</a>
+    </small></p>
+</footer>
 
-  </body>
+</div>
+<script src="javascripts/scale.fix.js"></script>
+
+</body>
+
 </html>
