--- a/resources.html
+++ b/resources.html
@@ -1,53 +1,59 @@
 <!doctype html>
 <html>
-  <head>
+
+<!-- browser tab head  -->
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Qihong Lu | Resources</title>
+    <title>Qihong Lu | Princeton University</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
     <meta name="viewport" content="width=device-width">
-
     <link rel="shortcut icon" href="https://psych.princeton.edu/sites/psychology/themes/psychology/favicon.ico" type="image/vnd.microsoft.icon" />
 
     <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-      ga('create', 'UA-83024954-2', 'auto');
-      ga('send', 'pageview');
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+        ga('create', 'UA-83024954-2', 'auto');
+        ga('send', 'pageview');
     </script>
+</head>
 
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1>Qihong Lu</h1>
-        <p></p>
+<!-- the main body  -->
 
-        <br>
-        <p class="view"> <a href="index.html">Home</a></p>
-        <p class="view"> <a href="research.html">Research</a></p>
-        <!-- <p class="view"> <a href="teaching.html">Teaching</a></p> -->
-<!--         <p class="view"> <a href="cv.html">CV</a></p> -->
-        <p class="view">Resources</p>
-        <p class="view"> <a href="contact.html">Contact</a></p>
-        <br>
+<body>
+<div class="wrapper">
 
-        <p class="view">
-        <a href="https://github.com/QihongL"> <img src="imgs/logo/github.png" alt="myGithub" style="width:40px;height:40px;"></a>
-        <a href="mailto:qlu@princeton.edu" target="_top"><img src="imgs/logo/email.png" alt="myEmail" style="width:40px;height:40px;"></a>
-        </p>
+<!-- the left column  -->
 
-        <p class="view">
-        <a href="https://www.facebook.com/qihong.lu.9"> <img src="imgs/logo/facebook.png" alt="myFacebook" style="width:40px;height:40px;"></a>
-        <a href="https://twitter.com/Qihong_Lu"> <img src="imgs/logo/twitter_flat.png" alt="myTwitter" style="width:41px;height:41px;"></a>
-        </p>
+<header>
+    <h1>Qihong Lu</h1>
+    <br>
 
+    <p class="view"> <a href="index.html">Home</a></p>
+    <p class="view"><a href="research.html">Research</a></p>
+    <p class="view">Resources</p>
+    <p class="view"><a href="contact.html">Contact</a></p>
+    <br>
 
-      </header>
-      <section>
+    <p class="view">
+    <a href="https://github.com/QihongL"> <img src="imgs/logo/github.png" alt="myGithub" style="width:40px;height:40px;"></a>
+    <a href="mailto:qlu@princeton.edu" target="_top"><img src="imgs/logo/email.png" alt="myEmail" style="width:40px;height:40px;"></a>
+    </p>
+
+    <p class="view">
+    <a href="https://www.facebook.com/qihong.lu.9"> <img src="imgs/logo/facebook.png" alt="myFacebook" style="width:40px;height:40px;"></a>
+    <a href="https://twitter.com/Qihong_Lu"> <img src="imgs/logo/twitter_flat.png" alt="myTwitter" style="width:41px;height:41px;"></a>
+    </p>
+</header>
+
+<!-- the END of left column  -->
+
+<!-- the right column  -->
+
+<section>
 
 Here're some machine learning and computational modeling resources for researchers in psychology and neuroscience.
 <br><br>
@@ -212,14 +218,19 @@ Fundations:
 
 
 
-      </section>
-      <footer>
-        <p><small>Hosted on GitHub Pages<br>
-        Theme by <a href="https://github.com/orderedlist">orderedlist</a>
-        </small></p>
-      </footer>
-    </div>
-    <script src="javascripts/scale.fix.js"></script>
+</section>
 
-  </body>
+<!-- the END of right column  -->
+
+<footer>
+    <p><small>Hosted on GitHub Pages<br>
+    Theme by <a href="https://github.com/orderedlist">orderedlist</a>
+    </small></p>
+</footer>
+
+</div>
+<script src="javascripts/scale.fix.js"></script>
+
+</body>
+
 </html>
