rm fnt, re-order

--- a/contact.html
+++ b/contact.html
@@ -114,11 +114,11 @@ Contact info
 
       </section>
 
-      <footer>
+<!--       <footer>
         <p><small>Hosted on GitHub Pages<br>
         Theme by <a href="https://github.com/orderedlist">orderedlist</a>
         </small></p>
-      </footer>
+      </footer> -->
     </div>
     <!-- <script src="javascripts/scale.fix.js"></script> -->
 
