--- a/index.html
+++ b/index.html
@@ -83,20 +83,22 @@ Ongoing stuff:
     </li>
     <li>
     I'm organizing the weekly PDP meeting.
-    Please send me an email if you would like to 
-    join the mailing list / present your work / etc.
-    </li>
+    Let me know if you'd like to ...
+    <ul>
+    <li>join the mailing list</li>
+    <li>present your work</li>
+    <li>etc.</li>
 </ul>
 
 </section>
 
 <!-- the END of right column  -->
 
-<footer>
+<!-- <footer>
     <p><small>Hosted on GitHub Pages<br>
     Theme by <a href="https://github.com/orderedlist">orderedlist</a>
     </small></p>
-</footer>
+</footer> -->
 
 </div>
 <script src="javascripts/scale.fix.js"></script>
