--- a/research.html
+++ b/research.html
@@ -90,9 +90,9 @@ PI: Uri Hasson, Princeton University
 <!-- <div style="padding-left: 4em; text-indent: -4em;"> -->
 
 <p>
-Lu, Q., Hasson, U., & Norman, K. A. (2018).
-<br>
 <b>Modeling hippocampal-cortical dynamics during event processing.</b>
+<br>
+Lu, Q., Hasson, U., & Norman, K. A. (2018).
 <br>
 The Conference on Cognitive Computational Neuroscience, Philadelphia, PA.
 <br>
@@ -101,9 +101,9 @@ The Conference on Cognitive Computational Neuroscience, Philadelphia, PA.
 </p>
 
 <p>
-Chen, C., Lu, Q., Beukers, A., Baldassano, C., & Norman, K. A. (2018).
-<br>
 <b>Generalized schema learning by neural networks.</b>
+<br>
+Chen, C., Lu, Q., Beukers, A., Baldassano, C., & Norman, K. A. (2018).
 <br>
 The Conference on Cognitive Computational Neuroscience, Philadelphia, PA.
 <br>
@@ -112,9 +112,9 @@ The Conference on Cognitive Computational Neuroscience, Philadelphia, PA.
 </p>
 
 <p>
-Yu, J., Lu, Q., Hasson, U., Norman, K. A., & Pillow, J. W. (2018).
-<br>
 <b>Performance optimization is insufficient for building accurate models for neural representation.</b>
+<br>
+Yu, J., Lu, Q., Hasson, U., Norman, K. A., & Pillow, J. W. (2018).
 <br>
 The Conference on Cognitive Computational Neuroscience, Philadelphia, PA.
 <br>
@@ -123,9 +123,9 @@ The Conference on Cognitive Computational Neuroscience, Philadelphia, PA.
 </p>
 
 <p>
-Lu, Q., Ramadge, P., Norman, K. A., & Hasson, U. (2018).
-<br>
 <b>Measuring representational similarity across neural networks.</b>
+<br>
+Lu, Q., Ramadge, P., Norman, K. A., & Hasson, U. (2018).
 <br>
 Poster presented at the 40th Annual Meeting of the Cognitive Science Society, Madison, WI.
 <br>
@@ -133,9 +133,9 @@ Poster presented at the 40th Annual Meeting of the Cognitive Science Society, Ma
 </p>
 
 <p>
-Lu, Q., & Rogers, T. T. (2016).
-<br>
 <b>An interactive model accounts for both ultra-rapid superordinate classification and basic-level advantage in object recognition.</b>
+<br>
+Lu, Q., & Rogers, T. T. (2016).
 <br>
 Poster presented at the 38th Annual Meeting of the Cognitive Science Society, Philadelphia, PA.
 <br>
@@ -144,9 +144,9 @@ Poster presented at the 38th Annual Meeting of the Cognitive Science Society, Ph
 </p>
 
 <p>
-Lu, Q., & McClelland, J. L. (2016).
-<br>
 <b>Teaching a neural network to count: reinforcement learning with "social scaffolding".</b>
+<br>
+Lu, Q., & McClelland, J. L. (2016).
 <br>
 Poster presented at the 15th Neural Computation and Psychology Workshop, Philadelphia, PA.
 <br>
@@ -155,9 +155,9 @@ Poster presented at the 15th Neural Computation and Psychology Workshop, Philade
 </p>
 
 <p>
-Cox, C. R., Lu, Q., & Rogers, T. T. (2015).
-<br>
 <b>Iterative Lasso: An even-handed approach to whole brain multivariate pattern analysis.</b>
+<br>
+Cox, C. R., Lu, Q., & Rogers, T. T. (2015).
 <br>
 Poster presented at the 22nd Cognitive Neuroscience Society annual conference, San Francisco, CA.
 <br>
@@ -176,17 +176,18 @@ Poster presented at the Neuroimaging, Computational Neuroscience and Neuroengine
 
 
 <p>
-McClelland, J. L., Mickey, K., Hansen, S., Yuan, X., & Lu, Q. (2016).
-<br>
 <b>A Parallel-Distributed Processing Approach to Mathematical Cognition.</b>
+<br>
+McClelland, J. L., Mickey, K., Hansen, S., Yuan, X., & Lu, Q. (2016).
 <br>
 <a href ="http://stanford.edu/~jlmcc/papers/McCEtAl16MsPDPApproachToMathematicalCognition.pdf">manuscript</a>
 </p>
 
 <p>
+<b>The role of transitional probability in reading Chinese.</b>
+<br> 
 Wang, T., Lu, Q., & Seidenberg, M.S. (submitted).
 <br>
-<b>The role of transitional probability in reading Chinese.</b>
 </p>
 
 <!-- </div> -->
@@ -195,11 +196,11 @@ Wang, T., Lu, Q., & Seidenberg, M.S. (submitted).
 
 </section>
 
-<footer>
+<!-- <footer>
     <p><small>Hosted on GitHub Pages<br>
     Theme by <a href="https://github.com/orderedlist">orderedlist</a>
     </small></p>
-</footer>
+</footer> -->
 
 </div>
 
