--- a/resources.html
+++ b/resources.html
@@ -222,11 +222,11 @@ Fundations:
 
 <!-- the END of right column  -->
 
-<footer>
+<!-- <footer>
     <p><small>Hosted on GitHub Pages<br>
     Theme by <a href="https://github.com/orderedlist">orderedlist</a>
     </small></p>
-</footer>
+</footer> -->
 
 </div>
 <script src="javascripts/scale.fix.js"></script>
