fix menu font size

--- a/contact.html
+++ b/contact.html
@@ -27,13 +27,13 @@
         <p></p>
         <br>
 
-        <p class="view"> <a href="index.html">Home</a></p>
-        <p class="view"> <a href="research.html">Research</a></p>
+        <p class="view"> <h4><a href="index.html">Home</a></h4></p>
+        <p class="view"> <h4><a href="research.html">Research</a></h4></p>
         <!-- <p class="view"> <a href="teaching.html">Teaching</a></p> -->
 <!--         <p class="view"> <a href="cv.html">CV</a></p> -->
-        <p class="view"> <a href="resources.html">Resources</a></p>
-        <p class="view"> Contact</p>
-        <br>
+        <p class="view"> <h4><a href="resources.html">Resources</a></h4></p>
+        <p class="view"> <h4>Contact<h4></p>
+        <br><br>
 
         <p class="view">
         <a href="https://github.com/QihongL"> <img src="imgs/logo/github.png" alt="myGithub" style="width:40px;height:40px;"></a>
