--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
     <h1>Qihong Lu</h1>
     <br>
 
-    <p class="view">Home</p>
-    <p class="view"><a href="research.html">Research</a></p>
-    <p class="view"><a href="resources.html">Resources</a></p>
-    <p class="view"><a href="contact.html">Contact</a></p>
-    <br>
+    <p class="view"><h4>Home</h4></p>
+    <p class="view"><a href="research.html"><h4>Research</h4></a></p>
+    <p class="view"><a href="resources.html"><h4>Resources</h4></a></p>
+    <p class="view"><a href="contact.html"><h4>Contact</h4></a></p>
+    <br><br>
 
     <p class="view">
     <a href="https://github.com/QihongL"> <img src="imgs/logo/github.png" alt="myGithub" style="width:40px;height:40px;"></a>
