--- a/research.html
+++ b/research.html
@@ -28,14 +28,12 @@
         <h1>Qihong Lu</h1>
         <p></p>
 
-        <br>
-        <p class="view"> <a href="index.html">Home</a></p>
-<!--         <p class="view"><a href="research.html">Research</a></p> -->
-        <!-- <p class="view"> <a href="teaching.html">Teaching</a></p> -->
-        <p class="view">Research</p>
-        <p class="view"> <a href="resources.html">Resources</a></p>
-        <p class="view"> <a href="contact.html">Contact</a></p>
-        <br>
+    <br>
+    <p class="view"><h4><a href="index.html">Home</a></h4></p>
+    <p class="view"><h4>Research</h4></p>
+    <p class="view"><a href="resources.html"><h4>Resources</h4></a></p>
+    <p class="view"><a href="contact.html"><h4>Contact</h4></a></p>
+    <br><br>
 
         <p class="view">
         <a href="https://github.com/QihongL"> <img src="imgs/logo/github.png" alt="myGithub" style="width:40px;height:40px;"></a>
