--- a/resources.html
+++ b/resources.html
@@ -32,11 +32,11 @@
     <h1>Qihong Lu</h1>
     <br>
 
-    <p class="view"> <a href="index.html">Home</a></p>
-    <p class="view"><a href="research.html">Research</a></p>
-    <p class="view">Resources</p>
-    <p class="view"><a href="contact.html">Contact</a></p>
-    <br>
+    <p class="view"><h4><a href="index.html">Home</a></h4></p>
+    <p class="view"><h4><a href="research.html">Research</a></h4></p>
+    <p class="view"><h4>Resources</h4></p>
+    <p class="view"><h4><a href="contact.html">Contact</a></h4></p>
+    <br><br>
 
     <p class="view">
     <a href="https://github.com/QihongL"> <img src="imgs/logo/github.png" alt="myGithub" style="width:40px;height:40px;"></a>
