regualr update; change col width

--- a/index.html
+++ b/index.html
@@ -67,12 +67,15 @@
 
 <p>
 Hi, my name is Qihong Lu (吕其鸿).
-I'm a 2nd year PhD student with
+I'm a 2nd year grad student with
 <a href="http://psychology.princeton.edu/person/kenneth-norman">Ken Norman</a>
 and
 <a href="https://psych.princeton.edu/person/uri-hasson-0">Uri Hasson</a>
-at Princeton.
+at Princeton. 
+<!-- I'm working neural network models of episodic memory for naturalistic processing.  -->
+
 Here's my <a href="docs/CV_QL.pdf">CV</a>.
+
 </p>
 
 Ongoing stuff:
