--- a/research.html
+++ b/research.html
@@ -84,58 +84,82 @@ PI: Uri Hasson, Princeton University
 
 
 <!-- <br> -->
-<h3><p> <strong>Conference presentations</strong></p></h3>
+<!-- <h2><p> <strong>Conference presentations</strong></p></h2> -->
 <!-- <div style="padding-left: 4em; text-indent: -4em;"> -->
+
+<!-- <p>
+<b>Shared representation across neural networks.</b>
+<br>
+Lu, Q., Chen, P. H., Pillow, J. W., Ramadge, P. J., Norman, K. A., & Hasson, U. 
+<br>
+Workshop on Integration of Deep Learning Theories, NIPS 2018. 
+<br>
+paper
+</p> -->
+
+
+<p>
+<b>Brainiak education: user-friendly tutorials for advanced, computationally-intensive fMRI analysis.</b>
+<br>
+Kumar, M., Ellis, C. T., Lu, Q., Zhang, H., Ramadge P. J., Norman, K. A., & Turk-Browne N. B. 
+<br>
+Poster presented at the Annual Meeting of the Society for Neuroscience, SfN 2018.
+<br>
+<!-- poster -->
+</p>
+
 
 <p>
 <b>Modeling hippocampal-cortical dynamics during event processing.</b>
 <br>
-Lu, Q., Hasson, U., & Norman, K. A. (2018).
+Lu, Q., Hasson, U., & Norman, K. A. 
 <br>
-The Conference on Cognitive Computational Neuroscience, Philadelphia, PA.
+The Conference on Cognitive Computational Neuroscience, CCN 2018.
 <br>
 <a href="https://qihongl.github.io/docs/CCN18_poster_HCModel.pdf">poster</a>,
-<a href="https://ccneuro.org/Papers/ViewPapers.asp?PaperNum=1048">manuscript</a>
+<a href="https://ccneuro.org/Papers/ViewPapers.asp?PaperNum=1048">paper</a>
 </p>
 
 <p>
 <b>Generalized schema learning by neural networks.</b>
 <br>
-Chen, C., Lu, Q., Beukers, A., Baldassano, C., & Norman, K. A. (2018).
+Chen, C., Lu, Q., Beukers, A., Baldassano, C., & Norman, K. A. 
 <br>
-The Conference on Cognitive Computational Neuroscience, Philadelphia, PA.
+The Conference on Cognitive Computational Neuroscience, CCN 2018. 
 <br>
 <a href="https://qihongl.github.io/docs/CCN18_poster_binding.pdf">poster</a>,
-<a href="https://ccneuro.org/Papers/ViewPapers.asp?PaperNum=1036">manuscript</a>
+<a href="https://ccneuro.org/Papers/ViewPapers.asp?PaperNum=1036">paper</a>
 </p>
 
 <p>
 <b>Performance optimization is insufficient for building accurate models for neural representation.</b>
 <br>
-Yu, J., Lu, Q., Hasson, U., Norman, K. A., & Pillow, J. W. (2018).
+Yu, J., Lu, Q., Hasson, U., Norman, K. A., & Pillow, J. W. 
 <br>
-The Conference on Cognitive Computational Neuroscience, Philadelphia, PA.
+The Conference on Cognitive Computational Neuroscience, CCN 2018. 
 <br>
 <a href="https://qihongl.github.io/docs/CNN18_poster_perfopt.pdf">poster</a>,
-<a href="https://ccneuro.org/Papers/ViewPapers.asp?PaperNum=1148">manuscript</a>
+<a href="https://ccneuro.org/Papers/ViewPapers.asp?PaperNum=1148">paper</a>
 </p>
 
 <p>
 <b>Measuring representational similarity across neural networks.</b>
 <br>
-Lu, Q., Ramadge, P., Norman, K. A., & Hasson, U. (2018).
+Lu, Q., Ramadge, P., Norman, K. A., & Hasson, U. 
 <br>
-Poster presented at the 40th Annual Meeting of the Cognitive Science Society, Madison, WI.
+Poster presented at the Annual Meeting of the Cognitive Science Society, CogSci 2018.
 <br>
 <a href="https://qihongl.github.io/docs/cogsci2018_poster.pdf">poster</a>
 </p>
 
+
+
 <p>
 <b>An interactive model accounts for both ultra-rapid superordinate classification and basic-level advantage in object recognition.</b>
 <br>
-Lu, Q., & Rogers, T. T. (2016).
+Lu, Q., & Rogers, T. T. 
 <br>
-Poster presented at the 38th Annual Meeting of the Cognitive Science Society, Philadelphia, PA.
+Poster presented at the Annual Meeting of the Cognitive Science Society, CogSci 2016.
 <br>
 <a href="https://qihongl.github.io/docs/cogsci2016_poster.pdf">poster</a>,
 <a href = "https://github.com/QihongL/categorization_PDP">code</a>
@@ -144,9 +168,9 @@ Poster presented at the 38th Annual Meeting of the Cognitive Science Society, Ph
 <p>
 <b>Teaching a neural network to count: reinforcement learning with "social scaffolding".</b>
 <br>
-Lu, Q., & McClelland, J. L. (2016).
+Lu, Q., & McClelland, J. L. 
 <br>
-Poster presented at the 15th Neural Computation and Psychology Workshop, Philadelphia, PA.
+Poster presented at the Neural Computation and Psychology Workshop, NCPW 2016.
 <br>
 <a href="https://qihongl.github.io/docs/ncpw16_poster.pdf">poster</a>,
 <a href = "https://github.com/QihongL/mathCognition_PDP_RL">code</a>
@@ -155,9 +179,9 @@ Poster presented at the 15th Neural Computation and Psychology Workshop, Philade
 <p>
 <b>Iterative Lasso: An even-handed approach to whole brain multivariate pattern analysis.</b>
 <br>
-Cox, C. R., Lu, Q., & Rogers, T. T. (2015).
+Cox, C. R., Lu, Q., & Rogers, T. T. 
 <br>
-Poster presented at the 22nd Cognitive Neuroscience Society annual conference, San Francisco, CA.
+Poster presented at the Cognitive Neuroscience Society conference, CNS 2015.
 <br>
 Poster presented at the Neuroimaging, Computational Neuroscience and Neuroengineering Workshop, Madison, WI.
 <br>
@@ -169,7 +193,7 @@ Poster presented at the Neuroimaging, Computational Neuroscience and Neuroengine
 
 
 <br>
-<h3><p> <strong>Manuscripts</strong></p></h3>
+<h2><p> <strong>Other manuscripts</strong></p></h2>
 <!-- <div style="padding-left: 4em; text-indent: -4em;"> -->
 
 
@@ -181,12 +205,12 @@ McClelland, J. L., Mickey, K., Hansen, S., Yuan, X., & Lu, Q. (2016).
 <a href ="http://stanford.edu/~jlmcc/papers/McCEtAl16MsPDPApproachToMathematicalCognition.pdf">manuscript</a>
 </p>
 
-<p>
+<!-- <p>
 <b>The role of transitional probability in reading Chinese.</b>
 <br> 
 Wang, T., Lu, Q., & Seidenberg, M.S. (submitted).
 <br>
-</p>
+</p> -->
 
 <!-- </div> -->
 
