--- a/contact.html
+++ b/contact.html
@@ -1,13 +1,14 @@
 <!doctype html>
 <html>
-  <head>
+
+<!-- browser tab head  -->
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Qihong Lu | Contact</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
     <meta name="viewport" content="width=device-width">
-
     <link rel="shortcut icon" href="https://psych.princeton.edu/sites/psychology/themes/psychology/favicon.ico" type="image/vnd.microsoft.icon" />
 
     <script>
@@ -18,19 +19,21 @@
       ga('create', 'UA-83024954-2', 'auto');
       ga('send', 'pageview');
     </script>
+</head>
 
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
+<!-- the main body  -->
+
+<body>
+<div class="wrapper">
+
+<!-- the left column  -->
+
+<header>
         <h1>Qihong Lu</h1>
-        <p></p>
         <br>
 
         <p class="view"> <h4><a href="index.html">Home</a></h4></p>
         <p class="view"> <h4><a href="research.html">Research</a></h4></p>
-        <!-- <p class="view"> <a href="teaching.html">Teaching</a></p> -->
-<!--         <p class="view"> <a href="cv.html">CV</a></p> -->
         <p class="view"> <h4><a href="resources.html">Resources</a></h4></p>
         <p class="view"> <h4>Contact<h4></p>
         <br><br>
@@ -44,16 +47,18 @@
         <a href="https://www.facebook.com/qihong.lu.9"> <img src="imgs/logo/facebook.png" alt="myFacebook" style="width:40px;height:40px;"></a>
         <a href="https://twitter.com/Qihong_Lu"> <img src="imgs/logo/twitter_flat.png" alt="myTwitter" style="width:41px;height:41px;"></a>
         </p>
+</header>
 
+<!-- the END of left column  -->
 
-      </header>
-      <section>
+<!-- the right column  -->
+
+<section>
 
 <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
 Contact info
 </h3>
-
 
 <br>
 <h3><p> <strong>My emails</strong></p></h3>
@@ -107,20 +112,18 @@ Contact info
     </body>
 </html>
 
+</section>
 
-<!-- <div class="mapouter"><div class="gmap_canvas"><iframe width="500" height="400" id="gmap_canvas" src="https://maps.google.com/maps?q=princeton%20neuroscience%20ins&t=&z=17&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.embedgooglemap.net">embedgooglemap.net</a></div><style>.mapouter{text-align:right;height:400px;width:500px;}.gmap_canvas {overflow:hidden;background:none!important;height:400px;width:500px;}</style></div> -->
-
-
-
-      </section>
+<!-- the END of right column  -->
 
 <!--       <footer>
         <p><small>Hosted on GitHub Pages<br>
         Theme by <a href="https://github.com/orderedlist">orderedlist</a>
         </small></p>
       </footer> -->
-    </div>
-    <!-- <script src="javascripts/scale.fix.js"></script> -->
+</div>
+<script src="javascripts/scale.fix.js"></script>
 
-  </body>
+</body>
+
 </html>
