--- a/research.html
+++ b/research.html
@@ -1,14 +1,14 @@
 <!doctype html>
 <html>
 
-  <head>
+<!-- browser tab head  -->
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Qihong Lu | Research</title>
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
     <meta name="viewport" content="width=device-width">
-
     <link rel="shortcut icon" href="https://psych.princeton.edu/sites/psychology/themes/psychology/favicon.ico" type="image/vnd.microsoft.icon" />
 
     <script>
@@ -19,16 +19,19 @@
       ga('create', 'UA-83024954-2', 'auto');
       ga('send', 'pageview');
     </script>
+</head>
 
-    </head>
+<!-- the main body  -->
 
 <body>
-    <div class="wrapper">
-      <header>
-        <h1>Qihong Lu</h1>
-        <p></p>
+<div class="wrapper">
 
+<!-- the left column  -->
+
+<header>
+    <h1>Qihong Lu</h1>
     <br>
+    
     <p class="view"><h4><a href="index.html">Home</a></h4></p>
     <p class="view"><h4>Research</h4></p>
     <p class="view"><a href="resources.html"><h4>Resources</h4></a></p>
@@ -44,59 +47,30 @@
         <a href="https://www.facebook.com/qihong.lu.9"> <img src="imgs/logo/facebook.png" alt="myFacebook" style="width:40px;height:40px;"></a>
         <a href="https://twitter.com/Qihong_Lu"> <img src="imgs/logo/twitter_flat.png" alt="myTwitter" style="width:41px;height:41px;"></a>
         </p>
+</header>
 
-      </header>
-      <section>
+<!-- the END of left column  -->
+
+<!-- the right column  -->
+
+<section>
 
 <h3>
-
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true">
-    <span aria-hidden="true" class="octicon octicon-link"></span>
-</a>
-
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>
 </h3>
 
-<!-- <h3><p> <strong>Education</strong></p> </h3>
 
-Ph.D. in Psychology, Princeton University
-<div style="float: right;">2017 ~ </div><br/>
-<br>
+<h3><p> <strong>Conference presentations</strong></p></h3>
 
-B.S. in Mathematics and Psychology, UW-Madison
-<div style="float: right;">2013 ~ May 2017 </div><br/>
-<br> -->
-
-<!--
-<br>
-<h3><p> <strong>Labs</strong>
-</p>
-</h3>
-
-<a href ="http://compmem.princeton.edu/">Princeton Computational Memory Lab</a>
-<div style="float: right;">2017~</div><br/>
-PI: Ken Norman, Princeton University
-<br><br>
-
-<a href ="https://www.hassonlab.com/">Hasson Lab</a>
-<div style="float: right;">2017~</div><br/>
-PI: Uri Hasson, Princeton University
-<br><br> -->
-
-
-<!-- <br> -->
-<!-- <h2><p> <strong>Conference presentations</strong></p></h2> -->
-<!-- <div style="padding-left: 4em; text-indent: -4em;"> -->
-
-<!-- <p>
+<p>
 <b>Shared representation across neural networks.</b>
 <br>
 Lu, Q., Chen, P. H., Pillow, J. W., Ramadge, P. J., Norman, K. A., & Hasson, U. 
 <br>
 Workshop on Integration of Deep Learning Theories, NIPS 2018. 
 <br>
-paper
-</p> -->
-
+<!-- paper -->
+</p>
 
 <p>
 <b>Brainiak education: user-friendly tutorials for advanced, computationally-intensive fMRI analysis.</b>
@@ -152,8 +126,6 @@ Poster presented at the Annual Meeting of the Cognitive Science Society, CogSci 
 <a href="https://qihongl.github.io/docs/cogsci2018_poster.pdf">poster</a>
 </p>
 
-
-
 <p>
 <b>An interactive model accounts for both ultra-rapid superordinate classification and basic-level advantage in object recognition.</b>
 <br>
@@ -189,13 +161,9 @@ Poster presented at the Neuroimaging, Computational Neuroscience and Neuroengine
 <a href="https://github.com/crcox/WISC_MVPA">code</a>
 </p>
 
-<!-- </div> -->
 
 
-<br>
-<h2><p> <strong>Other manuscripts</strong></p></h2>
-<!-- <div style="padding-left: 4em; text-indent: -4em;"> -->
-
+<h3><p> <strong>Other manuscripts</strong></p></h3>
 
 <p>
 <b>A Parallel-Distributed Processing Approach to Mathematical Cognition.</b>
@@ -212,9 +180,6 @@ Wang, T., Lu, Q., & Seidenberg, M.S. (submitted).
 <br>
 </p> -->
 
-<!-- </div> -->
-
-
 
 </section>
 
@@ -225,8 +190,8 @@ Wang, T., Lu, Q., & Seidenberg, M.S. (submitted).
 </footer> -->
 
 </div>
-
 <script src="javascripts/scale.fix.js"></script>
 
 </body>
+
 </html>
