testing gif demo

--- a/research.html
+++ b/research.html
@@ -155,14 +155,14 @@ Cox, C. R., Lu, Q., & Rogers, T. T.
 <br>
 Poster presented at the Cognitive Neuroscience Society conference, CNS 2015.
 <br>
-Poster presented at the Neuroimaging, Computational Neuroscience and Neuroengineering Workshop, Madison, WI.
+Poster presented at the Neuroimaging, Computational Neuroscience and Neuroengineering Workshop, Madison, WI., 2015. 
 <br>
 <a href="https://qihongl.github.io/docs/cox_lu_rogers_CNS2015.pdf">poster</a>,
 <a href="https://github.com/crcox/WISC_MVPA">code</a>
 </p>
 
 
-
+<br>
 <h3><p> <strong>Other manuscripts</strong></p></h3>
 
 <p>
@@ -170,7 +170,7 @@ Poster presented at the Neuroimaging, Computational Neuroscience and Neuroengine
 <br>
 McClelland, J. L., Mickey, K., Hansen, S., Yuan, X., & Lu, Q. (2016).
 <br>
-<a href ="http://stanford.edu/~jlmcc/papers/McCEtAl16MsPDPApproachToMathematicalCognition.pdf">manuscript</a>
+<a href ="http://stanford.edu/~jlmcc/papers/McCEtAl16MsPDPApproachToMathematicalCognition.pdf">paper</a>
 </p>
 
 <!-- <p>
